[project]
name = "payment-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomas"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)"
]

[tool.poetry]
packages = [{include = "payment_platform", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
